flickrset comment out

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1460,7 +1460,7 @@ footer#section-footer li a:hover {
 	/*border:#0F0 solid 1px;*/
 }
 
-/* Flickrset */
+/* Flickrset 
 .pane-flickrset iframe {
   width: 500px !important;
   height: 400px !important;
@@ -1468,7 +1468,7 @@ footer#section-footer li a:hover {
 #mini-panel-lc_twitter_feed, .pane-photo-of-the-time{
 	margin-left:25px;
 }
-
+*/
 .pane-menu-menu-about-us, .pane-accreditation{
 	margin-right:25px;
 }
