--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1460,15 +1460,20 @@ footer#section-footer li a:hover {
 	/*border:#0F0 solid 1px;*/
 }
 
-/* Flickrset 
-.pane-flickrset iframe {
-  width: 500px !important;
-  height: 400px !important;
+/* Flickrset */
+.footer-image {
+	margin-top:10px;
+	border:3px solid #e8e8e8;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border-collapse:inherit;
+	-moz-box-shadow:0 1px 3px #e4e4e4;
+	-webkit-box-shadow:0 1px 3px #e4e4e4;
+	box-shadow:0 1px 3px #e4e4e4;
 }
-#mini-panel-lc_twitter_feed, .pane-photo-of-the-time{
-	margin-left:25px;
-}
-*/
+
+
 .pane-menu-menu-about-us, .pane-accreditation{
 	margin-right:25px;
 }
