--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1463,14 +1463,16 @@ footer#section-footer li a:hover {
 /* Flickrset */
 .footer-image {
 	margin-top:10px;
-	border:3px solid #e8e8e8;
+	height:233px;
+	width:350px;
+	border:4px solid #e8e8e8;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
 	border-radius:8px;
 	border-collapse:inherit;
-	-moz-box-shadow:0 1px 3px #e4e4e4;
-	-webkit-box-shadow:0 1px 3px #e4e4e4;
-	box-shadow:0 1px 3px #e4e4e4;
+	-moz-box-shadow:0 1px 3px #000;
+	-webkit-box-shadow:0 1px 3px #000;
+	box-shadow:0 1px 3px #000;
 }
 
 
