--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1462,9 +1462,9 @@ footer#section-footer li a:hover {
 
 /* Flickrset */
 .footer-image {
-	margin-top:10px;
-	height:233px;
-	width:350px;
+	margin:20px;
+	height:266px;
+	width:400px;
 	border:4px solid #e8e8e8;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
