--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -40,6 +40,11 @@ div#region-user-second {
 	width:inherit;
 	color:inherit;
 }
+
+.view-lc-events .view-content .views-row {
+	margin-bottom:8px;
+}
+
 /*****************/
 /* footer region */
 /*****************/
