--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -262,9 +262,14 @@ ul.main-menu li {
 	margin-right:40px;
 }
 /*dropdown inside*/
+
+/* The following code is very generic and dangerous.
+   I'm leaving it here commented out until we figure
+   out for what element it was intended. -- James
+
 .panels-flexible-region-last{
 	border-left:#dddedf dotted 1px;
-	margin-bottom: -200px; /*margins are necessary for border to extend full height of longest column*/
+	margin-bottom: -200px;
 	padding-bottom: 200px;
 }
 .panels-flexible-region-last{
@@ -279,9 +284,9 @@ ul.main-menu li {
 	-moz-border-radius-topleft:8px;
 	-webkit-border-top-left-radius:8px;
 }
+*/
 
-
-.qtip-wrapper, .panels-flexible-region-inside-last {
+.qtip-wrapper, /*.panels-flexible-region-inside-last*/ {
 	-moz-box-shadow: 3px 3px 6px #dddedf;
 	-webkit-box-shadow: 3px 3px 6px #dddedf;
 	box-shadow: 3px 3px 6px #dddedf;
@@ -815,7 +820,7 @@ table.feature_table tbody tr:hover {
 	-o-transition: all 0.2s linear 0s;
 }
 
-table.feature_table tr:hover td,  table.feature_table tr.even:hover td.active,  table.feature_table tr.odd:hover td.active {  
+table.feature_table tr:hover td,  table.feature_table tr.even:hover td.active,  table.feature_table tr.odd:hover td.active {
 	background:#ececec;
 	-moz-transition: all 0.2s linear 0s;
 	-webkit-transition: all 0.2s linear 0s;
