--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1462,8 +1462,20 @@ footer#section-footer li a:hover {
 	margin-right:25px;
 }
 
-
-
-
-
-
+table.footer-list, table.footer-list:hover {
+	border:none;
+	background:none;
+	margin:0;
+	-moz-border-radius:0;
+	-webkit-border-radius:0;
+	border-radius:0;
+	border-collapse:inherit;
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+	box-shadow:none;
+}
+table.footer-list tr:hover td,
+table.footer-list tr.even:hover td.active,
+table.footer-list tr.odd:hover td.active {
+	background: transparent;
+}
