Ticket #83: Minor tweak to wide menu.

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-wide.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-wide.css
@@ -3,3 +3,9 @@
 #megamenu-studentlife {
 	margin-right: 480px;
 }
+.main-menu a {
+  padding: 7px 14px 8px;
+}
+#megamenu-apply, #megamenu-visit {
+  padding: 9px 21px 8px 30px;
+}
