--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -348,14 +348,19 @@ ul.main-menu li {
 }
 /* ========== ASIDE & SECONDARY NAV ========== */
 
+ul.jquerymenu li span.parent {
+	margin-left: -15px;
+	margin-top: 4px;
+}
 ul.jquerymenu li.parent span.open,
 ul.jquerymenu li.parent span.closed  {
-	background:url(../images/circle_list.png?a) no-repeat 3px -62px;
+	background:url(../images/circle_list.png?a) no-repeat 3px -60px;
 	z-index:10;
 }
 ul.jquerymenu li.parent span.open {
 	background-position:3px -90px;
 }
+
 .lynchburg-right-sidebar{
 	background:url(../images/vertical_rig_right.png) repeat-y top left;
 }
