--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -12,15 +12,15 @@ body {
 }
 
 .region-user-second-inner {
-  float: right;
-  padding: 20px 64px 0 0px;
+	float: right;
+	padding: 20px 64px 0 0px;
 }
 
 .zone-menu-wrapper {
 	margin-top: -33px;
 	background:none;
 	filter:none;
-  padding: 0;
+	padding: 0;
 }
 
 #megamenu-studentlife {
@@ -38,19 +38,19 @@ h2.pane-title {
  ******************************/
 
 body.front {
- 	background:#f9f9f9 url(../images/home/bg-stripe-home1.jpg) repeat-x top left;
+	background:#f9f9f9 url(../images/home/bg-stripe-home1.jpg) repeat-x top left;
 }
 
 .front .section-header {
- 	margin:0 auto;
- 	height: 450px;
- 	background:transparent url(../images/home/big-image2.jpg) no-repeat top center;
+	margin:0 auto;
+	height: 450px;
+	background:transparent url(../images/home/big-image2.jpg) no-repeat top center;
  }
 
 .front .section-content {
- 	background: transparent url(../images/home/convex-curve.png) no-repeat top center;
- 	margin:0 auto;
- 	margin-top:-22px;
+	background: transparent url(../images/home/convex-curve.png) no-repeat top center;
+	margin:0 auto;
+	margin-top:-22px;
  }
 
 .front .zone-content-wrapper {
@@ -62,11 +62,91 @@ body.front {
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
  **********************************************/
-#quicktabs-home_page_tabs ul, #whats-happening, #quicktabs-undergraduate_admission_tabs .item-list ul, #quicktabs-library_tabs ul {
+
+/* custom lc-rounded style has border radius and rounded corners */
+.region-content .pane-plain-box-lc-rounded-pane,
+.region-content .region-plain-box-lc-rounded-region,
+.region-content .pane-plain-box-lc-rounded-pane .pane-content,
+.region-content .region-plain-box-lc-rounded-region .rounded-shadow-background {
+	-webkit-border-top-left-radius:9px;
+	-moz-border-radius-topleft:9px;
+	border-top-left-radius:9px;
+}
+
+.region-content .region-plain-box-lc-rounded-region,
+.region-content .pane-plain-box-lc-rounded-pane {
+	min-height: 100px;
+	padding:0;
+	margin:0;
+	position: relative;
+
+/* Shadow */
+	-moz-box-shadow: 3px 3px 4px #dddedf;
+	-webkit-box-shadow: 3px 3px 4px #dddedf;
+	box-shadow: 3px 3px 4px #dddedf;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')"; /* IE8 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf'); /* IE 5.5 - 7 */
+}
+
+.region-content .region-plain-box-lc-rounded-region .rounded-shadow-background,
+.region-content .pane-plain-box-lc-rounded-pane .pane-content {
+/* background */
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ffffff 74%, #f7f8fc 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(74%,#ffffff), color-stop(100%,#f7f8fc)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #ffffff 74%,#f7f8fc 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #ffffff 74%,#f7f8fc 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #ffffff 74%,#f7f8fc 100%); /* IE10+ */
+	background: linear-gradient(top,  #ffffff 74%,#f7f8fc 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f7f8fc',GradientType=0 ); /* IE6-9 */
+}
+
+/*
+.region-content .pane-plain-box-lc-rounded-pane:before,
+.region-content .pane-plain-box-lc-rounded-pane:after {
+	z-index: -1;
+	position: absolute;
+	content: "";
+	bottom: 15px;
+	left: 10px;
+	width: 50%;
+	top: 80%;
+	max-width:300px;
+	background: rgba(0, 0, 0, 0.7);
+	-webkit-box-shadow: 0 15px 10px rgba(0,0,0, 0.7);
+	-moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
+	box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
+	-webkit-transform: rotate(-3deg);
+	-moz-transform: rotate(-3deg);
+	-o-transform: rotate(-3deg);
+}
+
+.region-content .pane-plain-box-lc-rounded-pane:after {
+	-webkit-transform: rotate(3deg);
+	-moz-transform: rotate(3deg);
+	-o-transform: rotate(3deg);
+	right: 10px;
+	left: auto;
+}
+*/
+.region-content .region-plain-box-lc-rounded-region .lc-title-bar,
+.region-content .pane-plain-box-lc-rounded-pane .quicktabs-tabs {
+	-webkit-border-top-left-radius:9px;
+	-moz-border-radius-topleft:9px;
+	border-top-left-radius:9px;
+
+	-webkit-border-bottom-right-radius:9px;
+	-moz-border-radius-bottomright:9px;
+	border-bottom-right-radius:9px;
+}
+
+
+.front .region-content .lc-title-bar,
+.front .region-content .quicktabs-tabs/*,
+#quicktabs-undergraduate_admission_tabs .item-list ul*/{
 	min-height:23px;
-	width:508px;
 	margin:0px;
-	padding: 8px 0 0 0;
+	padding: 8px 2px 0;
 	/* for non-css3 browsers */
 	background: #790600;
 	/* for IE */
@@ -75,13 +155,16 @@ body.front {
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#8f0900), to(#5a0500), color-stop(.6, #790600));
 	/* for firefox 3.6+ */
 	background: -moz-linear-gradient(25% 87% 90deg, #5a0500, #790600, #8f0900 100%);
-	-webkit-border-bottom-right-radius:6px;
-	-webkit-border-top-left-radius: 6px;
-	-moz-border-radius-topleft: 6px;
-	-moz-border-radius-bottomright: 6px;
-	border-top-left-radius: 6px;
-	border-bottom-right-radius: 6px;
 }
+
+.front .region-content .lc-title-bar,
+.front .region-content .lc-title-bar a,
+.front .region-content .lc-title-bar p,
+.front .region-content .lc-title-bar h2,
+.front .region-content .quicktabs-tabs a {
+	color:#f9f9f9;
+}
+
 #quicktabs-undergraduate_admission_tabs .item-list ul {
 	width:380px;
 }
@@ -97,7 +180,7 @@ body.front {
 #quicktabs-home_page_tabs li, #quicktabs-undergraduate_admission_tabs li, #quicktabs-library_tabs li {
 	margin:0px;
 	margin-left:5px;
-	padding:3px 9px 8px 9px;
+	padding:6px 9px 8px 9px;
 }
 #quicktabs-home_page_tabs li a:link, #quicktabs-undergraduate_admission_tabs li a:link, #quicktabs-library_tabs li a:link {
 	color:#fff;
@@ -128,6 +211,7 @@ body.front {
 #quicktabs-home_page_tabs li.active a, #quicktabs-undergraduate_admission_tabs li.active a, #quicktabs-library_tabs li.active a {
 	color:#27282d;
 }
+/*
 .pane-quicktabs-home-page-tabs, .pane-quicktabs-undergraduate-admission-tabs, .pane-quicktabs-library-tabs {
 	max-width:508px;
 	min-height:274px;
@@ -135,11 +219,11 @@ body.front {
 	-webkit-box-shadow: 3px 3px 4px #dddedf;
 	box-shadow: 3px 3px 4px #dddedf;
 	/* For IE 8 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
+/*	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
 	/* For IE 5.5 - 7 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf');
+/*	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf');
 	background:#fff url("../images/bg-audience.jpg") no-repeat bottom center;
-}
+}*/
 .pane-quicktabs-home-page-tabs .block-inner, .pane-quicktabs-undergraduate-admission-tabs .block-inner, .pane-quicktabs-library-tabs .block-inner{
 	padding:20px;
 }
@@ -157,34 +241,26 @@ body.front {
 .pane-1, .pane-1 pane-content,
 */
 
-#whats-happening {
-	width:960px;
-	height:31px;
-	color:#f9f9f9;
-}
 #whats-happening h2 {
 	float:left;
-	height:31px;
-	color:#f9f9f9;
 	font-size:14px;
-	margin:0px 0px 10px 10px;
-	}
-#whats-happening p {
-	float:right;
-	width:101px;
+	margin: 0px 0px 0 10px;
+	line-height: 1.2em;
+}
+#whats-happening ul {
+	position:absolute;
+	top:0;
+	right:0;
+	padding-left: 19px;
 	height:31px;
 	background: url(../images/home/bg-more-news.png) no-repeat top left;
-	color:#f9f9f9;
-	-webkit-margin-before:none;
-	-webkit-margin-after:none;
-	}
-#whats-happening p a {
-	color:#f9f9f9;
 }
-#whats-happening p a:hover {
+#whats-happening ul a {
+	padding:2px 10px
+}
+#whats-happening ul a:hover {
 	text-decoration:underline;
 }
-
 
 /****************************************/
 /* JCarousel "What's Happening" Rotator */
@@ -202,40 +278,40 @@ body.front {
 }
 
 .jcarousel-skin-default {
-  text-align: center;
-  border:solid 1px #00f;
+	text-align: center;
+	border:solid 1px #00f;
 }
 
 .jcarousel-skin-default .jcarousel-container-horizontal {
-  width: 890px;
-  height: 182px;
-  padding: 20px 40px;
-  margin: auto;
-  overflow:hidden;
+	width: 890px;
+	height: 182px;
+	padding: 20px 40px;
+	margin: auto;
+	overflow:hidden;
 }
 
 .jcarousel-skin-default .jcarousel-clip-horizontal {
-  width: 890px;
-  overflow: hidden;
+	width: 890px;
+	overflow: hidden;
 }
 
 .jcarousel-skin-default .jcarousel-item {
-  padding: 0;
-  width: 268px;
-  height: 180px;
-  overflow: hidden;
-  border: 1px solid #CCC;
-  list-style: none;
-  background: #fff none;
+	padding: 0;
+	width: 268px;
+	height: 180px;
+	overflow: hidden;
+	border: 1px solid #CCC;
+	list-style: none;
+	background: #fff none;
 }
 
 .jcarousel-skin-default .jcarousel-item-horizontal {
-  margin: 0 4px;
+	margin: 0 4px;
 }
 
 .jcarousel-skin-default .jcarousel-item-placeholder {
-  background: #fff url("../images/throbber.gif") no-repeat center center;
-  color: #000;
+	background: #fff url("../images/throbber.gif") no-repeat center center;
+	color: #000;
 }
 
 /**
@@ -243,44 +319,44 @@ body.front {
  */
 .jcarousel-skin-default .jcarousel-next,
 .jcarousel-skin-default .jcarousel-prev {
-  display: block;
-  width: 32px;
-  height: 32px;
-  background-image: url("../images/home/arrows.png");
+	display: block;
+	width: 32px;
+	height: 32px;
+	background-image: url("../images/home/arrows.png");
 }
 
 .jcarousel-skin-default .jcarousel-next-disabled,
 .jcarousel-skin-default .jcarousel-prev-disabled {
-  display: none;
+	display: none;
 }
 
 /**
  * Horizontal Buttons
  */
 .jcarousel-skin-default .jcarousel-prev-horizontal {
-  position: absolute;
-  top: 55px;
-  left: 10px;
-  background-position: 0 0;
+	position: absolute;
+	top: 55px;
+	left: 10px;
+	background-position: 0 0;
 }
 .jcarousel-skin-default .jcarousel-prev-horizontal:hover {
-  background-position: -32px 0;
+	background-position: -32px 0;
 }
 .jcarousel-skin-default .jcarousel-prev-horizontal:active {
-  background-position: -64px 0;
+	background-position: -64px 0;
 }
 
 .jcarousel-skin-default .jcarousel-next-horizontal {
-  position: absolute;
-  top: 55px;
-  right: 10px;
-  background-position: 0 -32px;
+	position: absolute;
+	top: 55px;
+	right: 10px;
+	background-position: 0 -32px;
 }
 .jcarousel-skin-default .jcarousel-next-horizontal:hover {
-  background-position: -32px -32px;
+	background-position: -32px -32px;
 }
 .jcarousel-skin-default .jcarousel-next-horizontal:active {
-  background-position: -64px -32px;
+	background-position: -64px -32px;
 }
 
 
@@ -317,64 +393,64 @@ body.front {
  */
 /*
 .jcarousel-skin-default .jcarousel-clip-vertical {
-  height: 440px;
-  overflow: hidden;
+	height: 440px;
+	overflow: hidden;
 }
 
 .jcarousel-skin-default .jcarousel-container-vertical {
-  width: 890px;
-  height: 440px;
-  padding: 40px 20px;
-  margin: auto;
+	width: 890px;
+	height: 440px;
+	padding: 40px 20px;
+	margin: auto;
 }
 
 .jcarousel-skin-default .jcarousel-item-vertical {
-  margin: 4px 0;
+	margin: 4px 0;
 }
 */
 /**
  * Vertical Buttons
  *
 .jcarousel-skin-default .jcarousel-prev-vertical {
-  position: absolute;
-  top: 10px;
-  left: 55px;
-  background-position: 0 -64px;
+	position: absolute;
+	top: 10px;
+	left: 55px;
+	background-position: 0 -64px;
 }
 .jcarousel-skin-default .jcarousel-prev-vertical:hover {
-  background-position: -32px -64px;
+	background-position: -32px -64px;
 }
 .jcarousel-skin-default .jcarousel-prev-vertical:active {
-  background-position: -64px -64px;
+	background-position: -64px -64px;
 }
 
 .jcarousel-skin-default .jcarousel-next-vertical {
-  position: absolute;
-  bottom: 10px;
-  left: 55px;
-  background-position: 0 -96px;
+	position: absolute;
+	bottom: 10px;
+	left: 55px;
+	background-position: 0 -96px;
 }
 .jcarousel-skin-default .jcarousel-next-vertical:hover {
-  background-position: -32px -96px;
+	background-position: -32px -96px;
 }
 .jcarousel-skin-default .jcarousel-next-vertical:active {
-  background-position: -64px -96px;
+	background-position: -64px -96px;
 }
 
 .jcarousel-skin-default .jcarousel-navigation {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .jcarousel-skin-default .jcarousel-navigation li {
-  display: inline;
-  margin: 0 2px 0 0;
-  padding: 0;
-  background: none;
+	display: inline;
+	margin: 0 2px 0 0;
+	padding: 0;
+	background: none;
 }
 
 .jcarousel-skin-default .jcarousel-navigation li.active a {
-  font-weight: bold;
-  text-decoration: none;
+	font-weight: bold;
+	text-decoration: none;
 }
 */
