Ticket #83: IE doesn't need a filter on full width.

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -9,6 +9,7 @@ body {
 	margin:0 auto;
 	padding:0;
 	background: transparent url(../images/bg-header-arch.jpg) no-repeat top center;
+	filter:none;
 }
 
 .region-user-second-inner {
