Ticket #83: IE is picky about filters.

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -531,6 +531,8 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	border-top-right-radius: 6px;
 	border-bottom:none;
 	background:#fff;
+	color:#27282d;
+	filter:none;
 }
 .region-content .quicktabs-tabs li.active {
 	-webkit-border-top-right-radius:6px;
@@ -542,10 +544,15 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	border-bottom:none;
 	background:#fff;
 	color:#27282d;
+	filter:none;
 }
-.region-content .quicktabs-tabs li.active a,
+.region-content .quicktabs-tabs li.active a {
+	color:#27282d;
+	filter:none;
+}
 .region-content .quicktabs-tabs li:hover a {
 	color:#27282d;
+	filter:none;
 }
 
 /* ========== BLOCKQUOTES ========== */
