--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -45,6 +45,14 @@ body {
 	padding: 3px 0 36px;
 }
 
+.region-user-second-inner {
+	padding: 20px 0 0 10px;
+}
+
+.zone-branding {
+	height: 67px;
+}
+
 .lynchburg-main{
 	margin-bottom:80px;
 }
@@ -59,6 +67,9 @@ body {
 	float: none;
 	width:280px;
 	text-align:center;
+	position: absolute;
+	left: 50%;
+	margin-left: -140px;
 }
 .logo-img img {
   margin-top: -10px;
@@ -140,10 +151,7 @@ a, a:link, a:visited, a:focus a:active {
 	text-decoration:none;
 	outline:none;
 }
-.region-user-second-inner {
-	float: right;
-	padding: 20px 0 0 0px;
-}
+
 /* ========== PARAGRAPH STYLES ========== */
 p {
 	margin:0 0 1.5em 0;
