--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -45,6 +45,10 @@
 	margin-bottom:15px;
 }
 
+#tour-left { float:left; }
+#tour-middle { float:left; }
+#tour-right {}
+
 /*****************/
 /* footer region */
 /*****************/
