--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -45,7 +45,7 @@
 	margin-bottom:15px;
 }
 
-#tour-left { float:left; margin-right:30px; }
+#tour-left { float:left; margin-right:30px; margin-bottom:30px; }
 #tour-middle { float:left; margin-right:30px; }
 #tour-right {}
 
