--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -45,6 +45,16 @@
 	margin-bottom:15px;
 }
 
+#tour-flickr {
+	border:3px solid #666;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border-collapse:inherit;
+	-moz-box-shadow:0 1px 3px #000;
+	-webkit-box-shadow:0 1px 3px #000;
+	box-shadow:0 1px 3px #000;
+}
 #tour-left { float:left; margin-right:30px; margin-bottom:30px; }
 #tour-middle { float:left; margin-right:30px; }
 #tour-right {}
