--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -46,6 +46,8 @@
 }
 
 #tour-flickr {
+	width: 500px;
+	height:300px;
 	border:3px solid #666;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
